Logtalk/examples/errors/invclause.lgt

:- object(invclause).

	% invalid clause head
	1234 :-
		write(hello).

:- end_object.
